# ouro_rl

./: .gitignore  CLAUDE.md  README.md  chat.py  grpo_train.py  pyproject.toml
.claude/: settings.json
.claude/skills/read-arxiv-paper/: SKILL.md
dev/: chat.py  chat_hf.py  compare_logprobs_vllm_hf.py  dataset_token_stats.py  estimate_memory.py  response_length_stats.py
dev/analysis/: common.py  visualize_angular_distance.py  visualize_latent_state_dist_per_loop.py  visualize_latent_state_dist_tokens.py
eval-tasks/: aime24_thinking.yaml  gsm8k_thinking.yaml
eval/scripts/: compute_pass_at_k.py  eval_errors.py  setup_tokenizer.py
eval/shells/: eval-code.sh  eval-common.sh  eval-math.sh  eval-qa.sh
eval/tasks/: _math_base.yaml  aime24_thinking.yaml  aime24_thinking_pass10.yaml  gpqa_main_thinking.yaml  gsm8k_thinking.yaml  math500_thinking.yaml  utils_math.py  utils_qa.py
ouro_rl/: data.py  distributed.py  grpo.py  packing.py  reward.py
scripts/: grpo_train.py  setup_tokenizer.py  vllm_worker.py
shells/: _machine_config.sh.template  _submit.sh  eval-code.sh  eval-common.sh  eval-math.sh  eval-qa.sh  grpo.sh
tests/integration/: test_grpo_train_integration.py  test_vllm_memory.py
tests/unit/: test_data.py  test_grpo.py  test_grpo_train.py  test_interruptions.py  test_packing.py  test_reward.py
